# pico_extmem

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
src/: cached_memory.cpp  extmem_mapper.cpp  main.cpp  spiram.cpp
src/include/: cached_memory.hpp  extmem_mapper.hpp  mem_interface.hpp  spiram.hpp
tests/: CMakeLists.txt  profile.cpp  profile.hpp  test_main.cpp
